cabal-version: 3.0
name:          plutus-contract
version:       1.0.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    jann.mueller@iohk.io
author:        Jann Müller
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

library
  import:          lang
  exposed-modules:
    Data.Row.Extras
    Data.Text.Extras
    Data.UUID.Extras
    Plutus.Contract
    Plutus.Contract.Checkpoint
    Plutus.Contract.Constraints
    Plutus.Contract.Effects
    Plutus.Contract.Error
    Plutus.Contract.Request
    Plutus.Contract.Resumable
    Plutus.Contract.Schema
    Plutus.Contract.Secrets
    Plutus.Contract.Types
    Wallet
    Wallet.Emulator
    Wallet.Emulator.Chain
    Wallet.Emulator.Error
    Wallet.Emulator.Folds
    Wallet.Emulator.LogMessages
    Wallet.Emulator.MultiAgent
    Wallet.Emulator.NodeClient
    Wallet.Emulator.Stream
    Wallet.Emulator.Types
    Wallet.Emulator.Wallet
    Wallet.Error
    Wallet.Types

  hs-source-dirs:  src

  --------------------
  -- Local components
  --------------------
  build-depends:
    , plutus-ledger
    , plutus-ledger-constraints
    , plutus-script-utils

  -- , freer-extras
  -- , plutus-chain-index-core
  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , plutus-core
    , plutus-ledger-api

  -- , cardano-api
  -- , cardano-crypto
  -- , cardano-ledger-core
  -- , cardano-wallet-core
  -- FIXME: probably needed
  -- yeet dep
  -- , plutus-tx
  -- , quickcheck-dynamic

  --if !(impl(ghcjs) || os(ghcjs))
  --  build-depends: plutus-tx-plugin

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson                 >=1.5.2
    , aeson-pretty
    , base                  >=4.7     && <5
    , bytestring
    , containers
    , cryptonite            >=0.25
    , data-default
    , deepseq
    , directory
    , filepath
    , flat
    , foldl
    , freer-simple
    , hashable
    , hedgehog
    , html-entities
    , IntervalMap
    , lens
    , memory
    , mmorph
    , mtl
    , openapi3
    , pretty
    , prettyprinter         >=1.1.0.1
    , profunctors
    , QuickCheck
    , row-types             >=1.0.1.0
    , semigroupoids
    , serialise
    , servant
    , stm
    , streaming
    , template-haskell
    , text
    , transformers
    , uniplate
    , unordered-containers
    , uuid

  -- , text-class
  if flag(defer-plugin-errors)
    ghc-options:   -fplugin-opt PlutusTx.Plugin:defer-errors

    ------------------------
    -- Non-IOG dependencies
    ------------------------
    build-depends:
      , tasty
      , tasty-golden
      , tasty-hunit
