cabal-version:   3.4
name:            plutus-ledger
version:         1.0.0
license:         Apache-2.0
license-file:    LICENSE NOTICE
maintainer:      michael.peyton-jones@iohk.io
author:          Michael Peyton Jones, Jann Mueller
synopsis:        Wallet API
description:     Plutus ledger library
category:        Language
build-type:      Simple
extra-doc-files: README.md

source-repository head
    type:     git
    location: https://github.com/input-output-hk/plutus-apps

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.

    default:     False
    manual:      True

library
    exposed-modules:
        Data.Aeson.Extras
        Data.Time.Units.Extra
        Ledger
        Ledger.Ada
        Ledger.Address
        Ledger.Address.Orphans
        Ledger.AddressMap
        Ledger.Blockchain
        Ledger.Builtins.Orphans
        Ledger.CardanoWallet
        Ledger.Credential.Orphans
        Ledger.Crypto
        Ledger.Crypto.Orphans
        Ledger.Fee
        Ledger.Generators
        Ledger.Index
        Ledger.Index.Internal
        Ledger.Orphans
        Ledger.Params
        Ledger.Scripts.Orphans
        Ledger.Slot
        Ledger.Test
        Ledger.TimeSlot
        Ledger.Tokens
        Ledger.Tx
        Ledger.Tx.CardanoAPI
        Ledger.Tx.Internal
        Ledger.Tx.Orphans
        Ledger.Tx.Orphans.V1
        Ledger.Tx.Orphans.V2
        Ledger.Typed.Scripts
        Ledger.Typed.Scripts.Orphans
        Ledger.Typed.Scripts.Validators
        Ledger.Typed.Tx
        Ledger.Typed.TypeUtils
        Ledger.Validation
        Ledger.Value
        Ledger.Value.Orphans
        Prettyprinter.Extras

    reexported-modules:
        Plutus.V1.Ledger.Bytes as Ledger.Bytes,
        Plutus.V1.Ledger.Credential as Ledger.Credential,
        Plutus.V1.Ledger.DCert as Ledger.DCert,
        Plutus.V1.Ledger.Interval as Ledger.Interval,
        Plutus.V1.Ledger.Scripts as Ledger.Scripts,
        Plutus.V1.Ledger.Time as Ledger.Time

    hs-source-dirs:     src
    other-modules:
        Codec.CBOR.Extras
        Ledger.Tx.CardanoAPITemp

    default-language:   Haskell2010
    default-extensions:
        DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift
        DeriveTraversable ExplicitForAll FlexibleContexts
        GeneralizedNewtypeDeriving ImportQualifiedPost
        MultiParamTypeClasses ScopedTypeVariables StandaloneDeriving

    ghc-options:
        -Wall -Wnoncanonical-monad-instances -Wunused-packages
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wredundant-constraints -Widentities -fobject-code
        -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
        -fprint-potential-instances

    build-depends:
        freer-extras >=1.0.0,
        plutus-script-utils >=1.0.0,
        cardano-api:{cardano-api, gen} >=1.35,
        cardano-crypto,
        cardano-crypto-class,
        cardano-ledger-alonzo,
        cardano-ledger-babbage,
        cardano-ledger-byron,
        cardano-ledger-core,
        cardano-ledger-shelley,
        cardano-ledger-shelley-ma,
        cardano-slotting,
        iohk-monitoring,
        ouroboros-consensus,
        ouroboros-consensus-shelley,
        plutus-core >=1.0.0,
        plutus-ledger-api >=1.0.0,
        plutus-tx >=1.0.0,
        aeson,
        array,
        base >=4.9 && <5,
        base16-bytestring,
        bytestring,
        cborg,
        containers,
        cryptonite >=0.25,
        data-default,
        deepseq,
        flat,
        hashable,
        hedgehog,
        http-api-data,
        lens,
        memory,
        mtl,
        newtype-generics,
        openapi3,
        prettyprinter,
        scientific,
        serialise,
        servant,
        strict-containers,
        tagged,
        template-haskell,
        text,
        time,
        time-units,
        transformers

    if !(impl(ghcjs >=0) || os(ghcjs))
        build-depends: plutus-tx-plugin >=1.0.0

    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

test-suite plutus-ledger-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    other-modules:      Ledger.Tx.CardanoAPISpec
    default-language:   Haskell2010
    default-extensions:
        DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift
        DeriveTraversable ExplicitForAll FlexibleContexts
        GeneralizedNewtypeDeriving ImportQualifiedPost
        MultiParamTypeClasses ScopedTypeVariables StandaloneDeriving

    ghc-options:
        -Wall -Wnoncanonical-monad-instances -Wunused-packages
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wredundant-constraints -Widentities -fobject-code
        -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

    build-depends:
        plutus-ledger >=1.0.0,
        plutus-script-utils >=1.0.0,
        cardano-api:{cardano-api, gen} >=1.35,
        cardano-crypto-class >=2.0.0,
        plutus-ledger-api >=1.0.0,
        plutus-tx >=1.0.0,
        aeson,
        base >=4.9 && <5,
        bytestring,
        containers,
        data-default,
        hedgehog,
        tasty,
        tasty-hedgehog,
        tasty-hunit
